unpackaged/main/default/objects/Product2/fields/Base_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Base_Product_Code__c</fullName>
    <label>Base Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>