unpackaged/main/default/objects/Product2/fields/Basis_Description__c.field-meta.xml
<CustomField>
    <fullName>Basis_Description__c</fullName>
    <label>Basis Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Basis_Description</valueSetName>
    </valueSet>
</CustomField>