unpackaged/main/default/objects/Product2/fields/Bundle_Group__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Group__c</fullName>
    <description>Used to identify which bundle group a product belongs to.</description>
    <label>Bundle Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OneCouncil QLD</fullName>
            </value>
            <value>
                <fullName>G Cloud OneCouncil</fullName>
            </value>
            <value>
                <fullName>G Cloud OneEducation</fullName>
            </value>
            <value>
                <fullName>G Cloud OnePublicSector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>