unpackaged/main/default/objects/Product2/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <description>Used to identify different types of bundle (combination types of products)</description>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bundle_Type</valueSetName>
    </valueSet>
</CustomField>