unpackaged/main/default/objects/Product2/fields/Connector_Code__c.field-meta.xml
<CustomField>
    <fullName>Connector_Code__c</fullName>
    <label>Connector Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>