unpackaged/main/default/objects/Product2/fields/Connector_GL_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Connector_GL_Product_Code__c</fullName>
    <label>Connector GL Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>