unpackaged/main/default/objects/Product2/fields/Connector_Module__c.field-meta.xml
<CustomField>
    <fullName>Connector_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Connector module revenue recognition</description>
    <inlineHelpText>Tick this box to use connector revenue recognition rule</inlineHelpText>
    <label>Connector Module?</label>
    <type>Checkbox</type>
</CustomField>