unpackaged/main/default/objects/Product2/fields/Connector_Rev_Target_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Connector_Rev_Target_Code_1__c</fullName>
    <description>Used for splitting revenue on revenue transaction for Connector products</description>
    <inlineHelpText>Enter the target revenue GL Code for the Connector Product.</inlineHelpText>
    <label>Connector Rev Target Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>