unpackaged/main/default/objects/Product2/fields/Exclude_from_ARR__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_ARR__c</fullName>
    <formula>IF(blng__RevenueRecognitionRule__r.Name = &#39;No Revenue&#39;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from ARR</label>
    <type>Checkbox</type>
</CustomField>