unpackaged/main/default/objects/Product2/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <label>Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>