unpackaged/main/default/objects/Product2/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <formula>CASE( Category__c,&quot;Product&quot;, &#39;License&#39;, 
&quot;Module&quot;, &#39;License&#39;, 
&quot;Support Fee&quot;, &#39;ASM&#39;, 
&quot;SaaS Platform&quot;, &#39;Cloud&#39;,
&quot;Application Managed Services&quot;,&#39;AMS&#39;,
NULL)</formula>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>