unpackaged/main/default/objects/Product2/fields/Flip_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Flip_to_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flip to Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products and Modules (Flip to Product)</relationshipLabel>
    <relationshipName>Products_and_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>