unpackaged/main/default/objects/Product2/fields/For_Deal_Types__c.field-meta.xml
<CustomField>
    <fullName>For_Deal_Types__c</fullName>
    <label>For Deal Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deal_Type</valueSetName>
    </valueSet>
</CustomField>