unpackaged/main/default/objects/Product2/fields/For_Regions__c.field-meta.xml
<CustomField>
    <fullName>For_Regions__c</fullName>
    <label>For Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>