unpackaged/main/default/objects/Product2/fields/GL_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Product_Code__c</fullName>
    <label>GL Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>