unpackaged/main/default/objects/Product2/fields/High_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Risk__c</fullName>
    <label>High Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>RnD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>