unpackaged/main/default/objects/Product2/fields/Include_in_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Product_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to see if this product should be included in the product count to define the behavioral discount.</description>
    <label>Include in Product Count</label>
    <type>Checkbox</type>
</CustomField>