unpackaged/main/default/objects/Product2/fields/Include_in_SaaS_Platform_Summary__c.field-meta.xml
<CustomField>
    <fullName>Include_in_SaaS_Platform_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in SaaS Platform Summary</label>
    <type>Checkbox</type>
</CustomField>