unpackaged/main/default/objects/Product2/fields/Include_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Include_Product_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this box to insert Product Description into Quote document</description>
    <inlineHelpText>Tick this box to insert Product Description into Quote document</inlineHelpText>
    <label>Include Product Description</label>
    <type>Checkbox</type>
</CustomField>