unpackaged/main/default/objects/Product2/fields/Legacy_Zero_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Zero_License_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Zero License Fee</label>
    <type>Checkbox</type>
</CustomField>