unpackaged/main/default/objects/Product2/fields/Max_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Max_Percentage__c</fullName>
    <description>Maximum Eligible Discount, field added on Eligible Discount product to limit the Eligible Discount that can be given by a Sales Person.</description>
    <label>Max Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>