unpackaged/main/default/objects/Product2/fields/Migrate__c.field-meta.xml
<CustomField>
    <fullName>Migrate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Temporary field for flagging records to include in the Prodly migration</description>
    <label>Migrate</label>
    <type>Checkbox</type>
</CustomField>