unpackaged/main/default/objects/Product2/fields/Migrated_from_Product__c.field-meta.xml
<CustomField>
    <fullName>Migrated_from_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only use for the shadow products in Perpetual on Cloud migration.</description>
    <label>Migrated from Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products and Modules (Migrated from Product)</relationshipLabel>
    <relationshipName>MigratedToProduct</relationshipName>
    <type>Lookup</type>
</CustomField>