unpackaged/main/default/objects/Product2/fields/Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity__c</fullName>
    <description>Minimum quantity that should be sold for this product.</description>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>