unpackaged/main/default/objects/Product2/fields/Mod_Code__c.field-meta.xml
<CustomField>
    <fullName>Mod_Code__c</fullName>
    <description>Module Code used to identify between SF and SRS</description>
    <externalId>true</externalId>
    <label>Ext Module Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>