unpackaged/main/default/objects/Product2/fields/Module_G__c.field-meta.xml
<CustomField>
    <fullName>Module_G__c</fullName>
    <label>Module Group Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>