unpackaged/main/default/objects/Product2/fields/Module_Group__c.field-meta.xml
<CustomField>
    <fullName>Module_Group__c</fullName>
    <label>Module Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Extensions</fullName>
            </value>
            <value>
                <fullName>ADF</fullName>
            </value>
            <value>
                <fullName>AM.MYCREWMAN</fullName>
            </value>
            <value>
                <fullName>AM_ASSET_SURVEY</fullName>
            </value>
            <value>
                <fullName>AM_CREWMANAGE</fullName>
            </value>
            <value>
                <fullName>AM_DEFECTS</fullName>
            </value>
            <value>
                <fullName>AM_ENQUIRIES</fullName>
            </value>
            <value>
                <fullName>AM_MOBILE</fullName>
            </value>
            <value>
                <fullName>AM_MOBILE_WORK</fullName>
            </value>
            <value>
                <fullName>APPLICATION</fullName>
            </value>
            <value>
                <fullName>ASSETIC</fullName>
            </value>
            <value>
                <fullName>BIESI</fullName>
            </value>
            <value>
                <fullName>COMM_LOCALGOVT</fullName>
            </value>
            <value>
                <fullName>COMMUNITY</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>DXP</fullName>
            </value>
            <value>
                <fullName>E1.BUSONE</fullName>
            </value>
            <value>
                <fullName>EARNIEIQ</fullName>
            </value>
            <value>
                <fullName>EB</fullName>
            </value>
            <value>
                <fullName>ECASE</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>ECR.EXT</fullName>
            </value>
            <value>
                <fullName>EMPLIVE</fullName>
            </value>
            <value>
                <fullName>ESCROW</fullName>
            </value>
            <value>
                <fullName>F1.EXPENSEREPORTING</fullName>
            </value>
            <value>
                <fullName>F1.MYDATAENTRY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>