unpackaged/main/default/objects/Product2/fields/Module_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Group_Name__c</fullName>
    <label>Module Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>