unpackaged/main/default/objects/Product2/fields/Module_Type__c.field-meta.xml
<CustomField>
    <fullName>Module_Type__c</fullName>
    <label>Module Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Revenue Management</fullName>
            </value>
            <value>
                <fullName>Community Relationship Management</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Employee Self Serv</fullName>
            </value>
            <value>
                <fullName>eProperty Online Services</fullName>
            </value>
            <value>
                <fullName>Extensions</fullName>
            </value>
            <value>
                <fullName>External Web Service</fullName>
            </value>
            <value>
                <fullName>GIS/Mapping</fullName>
            </value>
            <value>
                <fullName>Included MyModules</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Product Connectors</fullName>
            </value>
            <value>
                <fullName>Project Execution &amp; Delivery</fullName>
            </value>
            <value>
                <fullName>Regulatory Management</fullName>
            </value>
            <value>
                <fullName>SAM Asset Management</fullName>
            </value>
            <value>
                <fullName>Work Management</fullName>
            </value>
            <value>
                <fullName>XML Interfaces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>