unpackaged/main/default/objects/Product2/fields/New_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>