unpackaged/main/default/objects/Product2/fields/No_Indexation__c.field-meta.xml
<CustomField>
    <fullName>No_Indexation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Indexation</label>
    <type>Checkbox</type>
</CustomField>