unpackaged/main/default/objects/Product2/fields/Option_Level__c.field-meta.xml
<CustomField>
    <fullName>Option_Level__c</fullName>
    <description>Used to represent different option levels in SaaS platform bundle and Standard and Non standard Service Pack used for visualization</description>
    <label>Option Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>