unpackaged/main/default/objects/Product2/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>This will feed into the Quote document under Product Information</description>
    <inlineHelpText>Enter a description to insert into the Quote document under Product Information</inlineHelpText>
    <label>Product Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>