unpackaged/main/default/objects/Product2/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <formula>CASE(TEXT(GL_Product_Name__c), 
&#39;Asset Management&#39;, &#39;Peter Suchting&#39;, 
&#39;Stakeholder Management&#39;, &#39;Peter Suchting&#39;, 
&#39;Property&#39;, &#39;Peter Suchting&#39;, 
&#39;Spatial&#39;, &#39;Peter Suchting&#39;,
&#39;Business Intelligence&#39;, &#39;Peter Gill&#39;, 
&#39;Corporate Performance Management&#39;, &#39;Peter Gill&#39;, 
&#39;Financials&#39;, &#39;Peter Gill&#39;, 
&#39;Performance Planning&#39;, &#39;Peter Gill&#39;, 
&#39;Supply Chain Management&#39;, &#39;Peter Gill&#39;, 
&#39;Student Management&#39;,&#39;Matt Arnott&#39;, 
&#39;Enterprise Content Management&#39;, &#39;Angus McDonald&#39;, 
&#39;Business Process Management&#39;, &#39;Paul MacRae&#39;, 
&#39;HR &amp; Payroll&#39;, &#39;Paul MacRae&#39;,
&#39;z_Other&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Product Manager</label>
    <type>Text</type>
</CustomField>