unpackaged/main/default/objects/Product2/fields/Product_or_Module__c.field-meta.xml
<CustomField>
    <fullName>Product_or_Module__c</fullName>
    <label>Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
                <default>true</default>
                <label>Module</label>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
            <value>
                <fullName>Service Pack</fullName>
            </value>
            <value>
                <fullName>AMS Program</fullName>
            </value>
            <value>
                <fullName>Saas Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>