unpackaged/main/default/objects/Product2/fields/Product_Specific_Term__c.field-meta.xml
<CustomField>
    <fullName>Product_Specific_Term__c</fullName>
    <description>This field when populated will feed into Quote Document under Special Clause section</description>
    <inlineHelpText>This field when populated will feed into Quote Document under Special Clause section</inlineHelpText>
    <label>Product Specific Term</label>
    <type>TextArea</type>
</CustomField>