unpackaged/main/default/objects/Product2/fields/Quote_Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Quote_Document_Description__c</fullName>
    <description>This will populate on the Quote document as quote line description</description>
    <inlineHelpText>This will populate on the Quote document as quote line description</inlineHelpText>
    <label>Quote Document Description</label>
    <type>TextArea</type>
</CustomField>