unpackaged/main/default/objects/Product2/fields/Rev_Adj__c.field-meta.xml
<CustomField>
    <fullName>Rev_Adj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rev Adj</label>
    <type>Checkbox</type>
</CustomField>