unpackaged/main/default/objects/Product2/fields/Revenue_Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Sub_Account__c</fullName>
    <label>Revenue Sub Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>