unpackaged/main/default/objects/Product2/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Product</label>
    <referenceTo>Service_Product__c</referenceTo>
    <relationshipLabel>Products and Modules</relationshipLabel>
    <relationshipName>Products_and_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>