unpackaged/main/default/objects/Product2/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>