unpackaged/main/default/objects/Product2/fields/Solution_Discount__c.field-meta.xml
<CustomField>
    <fullName>Solution_Discount__c</fullName>
    <description>To maintain Industry solution discounts.</description>
    <label>Solution Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>