unpackaged/main/default/objects/Product2/validationRules/Include_Product_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Include_Product_Description</fullName>
    <active>true</active>
    <description>When Product Description is populated Include Product Description checkbox needs to be ticked.</description>
    <errorConditionFormula>AND(
 Include_Product_Description__c = false,
LEN(  Product_Description__c )&gt;0)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>You have entered Product Description, please tick Special Clause checkbox to include in Quote Document</errorMessage>
</ValidationRule>