unpackaged/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Mod_Code__c</columns>
    <columns>Solution__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.SKU</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_or_Module__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </filters>
    <label>All Products</label>
</ListView>