unpackaged/main/default/objects/Product2/listViews/All_Solutions.listView-meta.xml
<ListView>
    <fullName>All_Solutions</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Solution__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Bundle_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bundle_Type__c</field>
        <operation>equals</operation>
        <value>Solution</value>
    </filters>
    <label>All Solutions</label>
</ListView>