unpackaged/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>Product_or_Module__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Bundle_Group__c</columns>
    <columns>Bundle_Type__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Category__c</columns>
    <columns>SBQQ__BillingFrequency__c</columns>
    <columns>SBQQ__SubscriptionTerm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products and Modules</label>
</ListView>