unpackaged/main/default/objects/Product2/listViews/AMS_Programs.listView-meta.xml
<ListView>
    <fullName>AMS_Programs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>SBQQ__QuantityEditable__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>AMS Programs</label>
</ListView>